force-app/src/objects/TR1__Fyre_Account_Settings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>VMS Integration Settings for Fyre</description>
    <fields>
        <fullName>TR1__Client_Id__c</fullName>
        <label>Client Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Client_Secret__c</fullName>
        <label>Client Secret</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Fyre_App_Name__c</fullName>
        <label>Fyre App Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Fyre_Coordinator_Field_API_Name__c</fullName>
        <label>Fyre Coordinator Field API Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Fyre_Coordinator_First_Name__c</fullName>
        <label>Fyre Coordinator First Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Fyre_Coordinator_Last_Name__c</fullName>
        <label>Fyre Coordinator Last Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Fyre_Endpoint__c</fullName>
        <label>Fyre Endpoint</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>TR1__Fyre_Payload_URL__c</fullName>
        <label>Fyre Payload URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Fyre_Record_Type_Param__c</fullName>
        <label>Fyre Record Type Param</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Fyre_Supervisor_Field_API_Name__c</fullName>
        <label>Fyre Supervisor Field API Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Fyre_Supervisor_First_Name__c</fullName>
        <label>Fyre Supervisor First Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Fyre_Supervisor_Last_Name__c</fullName>
        <label>Fyre Supervisor Last Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Fyre_Sync_Account_Id__c</fullName>
        <label>Fyre Sync Account Id</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Fyre_Talent_Rover_Endpoint__c</fullName>
        <label>Fyre Talent Rover Endpoint</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Fyre_VMS_Field_API_Name__c</fullName>
        <label>Fyre VMS Field API Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Fyre_VMS_Type__c</fullName>
        <label>Fyre VMS Type</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Job_External_ID__c</fullName>
        <defaultValue>&quot;TR1__Unique_VMS_Req_ID__c&quot;</defaultValue>
        <label>Job External ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Log_Failures__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Log Successes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR1__Org_Id__c</fullName>
        <label>Org Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>Fyre Account Settings</label>
</CustomObject>